LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Actual_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attendees__c</fullName>
    <label>Actual Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>