LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Any_other_comments__c.field-meta.xml
<CustomField>
    <fullName>Any_other_comments__c</fullName>
    <label>Any other comments</label>
    <type>TextArea</type>
</CustomField>