LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Anything_beyond_the_Cx_survey_you_want_t__c.field-meta.xml
<CustomField>
    <fullName>Anything_beyond_the_Cx_survey_you_want_t__c</fullName>
    <label>Share beyond Cx survey</label>
    <type>TextArea</type>
</CustomField>