LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Anything_that_is_distinctive_about_our_s__c.field-meta.xml
<CustomField>
    <fullName>Anything_that_is_distinctive_about_our_s__c</fullName>
    <label>Anything distinctive about our service</label>
    <type>TextArea</type>
</CustomField>