LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/AttendeesId__c.field-meta.xml
<CustomField>
    <fullName>AttendeesId__c</fullName>
    <label>EmployeesId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>