LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Client_Council_Task__c.field-meta.xml
<CustomField>
    <fullName>Client_Council_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify task created after CC approval on new client</description>
    <label>Client Council Task</label>
    <type>Checkbox</type>
</CustomField>