LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Client_s_priorities_and_Interests__c.field-meta.xml
<CustomField>
    <fullName>Client_s_priorities_and_Interests__c</fullName>
    <label>Client’s priorities and Interests</label>
    <type>TextArea</type>
</CustomField>