LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <label>Actual End Date Time</label>
    <type>DateTime</type>
</CustomField>