LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Feedback_on_meeting_next_steps__c.field-meta.xml
<CustomField>
    <fullName>Feedback_on_meeting_next_steps__c</fullName>
    <label>Feedback on meeting &amp; next steps</label>
    <type>TextArea</type>
</CustomField>