LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Have_we_been_good_at_involving_other_exp__c.field-meta.xml
<CustomField>
    <fullName>Have_we_been_good_at_involving_other_exp__c</fullName>
    <label>Specific areas of interest</label>
    <type>TextArea</type>
</CustomField>