LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Have_you_experienced_any_problems_with_o__c.field-meta.xml
<CustomField>
    <fullName>Have_you_experienced_any_problems_with_o__c</fullName>
    <label>Any problem with services in 12 months</label>
    <type>TextArea</type>
</CustomField>