LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/IntroHive__Last_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Last_Update_Time__c</fullName>
    <description>The date and time the Introhive data was updated on Activities.</description>
    <label>Last_Update_Time</label>
    <type>DateTime</type>
</CustomField>