LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Is_event_overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_event_overdue__c</fullName>
    <formula>End_Date_Time__c &lt;  DATETIMEVALUE(Today()) &amp;&amp;  ISPICKVAL(Status__c , &apos;Scheduled&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is event overdue?</label>
    <type>Checkbox</type>
</CustomField>