LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Meeting_agenda__c.field-meta.xml
<CustomField>
    <fullName>Meeting_agenda__c</fullName>
    <label>Meeting agenda</label>
    <type>TextArea</type>
</CustomField>