LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Meeting_notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_notes__c</fullName>
    <label>Meeting notes</label>
    <type>TextArea</type>
</CustomField>