LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Minutes_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Meeting__c</fullName>
    <formula>&quot;Agenda -&quot; &amp; Meeting_agenda__c
&amp; BR()&amp;
&quot;Notes -&quot; &amp; Meeting_notes__c
&amp; BR()&amp;
&quot;Additional Client Priorities and Interests -&quot; &amp; Client_s_priorities_and_Interests__c
&amp; BR()&amp;
&quot;Next Steps &amp; Action Items -&quot; &amp; Next_Steps_Action_Items__c</formula>
    <label>Minutes of Meeting</label>
    <type>Text</type>
</CustomField>