LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Next_Steps_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Action_Items__c</fullName>
    <label>Next Steps &amp; Action Items</label>
    <type>TextArea</type>
</CustomField>