LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <formula>IF
(
	(TODAY() -  ActivityDate) &lt; 0,
	0,
	(TODAY() -  ActivityDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>