LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Proposed_date_of_next_meeting__c.field-meta.xml
<CustomField>
    <fullName>Proposed_date_of_next_meeting__c</fullName>
    <label>Proposed date of next meeting</label>
    <type>Date</type>
</CustomField>