LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Recommendations_Takeaways__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Takeaways__c</fullName>
    <label>Recommendations &amp; Takeaways</label>
    <type>TextArea</type>
</CustomField>