LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Actual Start Date Time</label>
    <type>DateTime</type>
</CustomField>