LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Task_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Task_Assignee__c</fullName>
    <description>Used to get assignee name for email template</description>
    <label>Task Assignee</label>
    <length>60</length>
    <type>Text</type>
</CustomField>