LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/WCGTStatus__c.field-meta.xml
<CustomField>
    <fullName>WCGTStatus__c</fullName>
    <label>WCGTStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>