LinKreta_POC_Repository/force-app/main/default/objects/Activity/fields/Would_you_recommend_us_to_another_organi__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_us_to_another_organi__c</fullName>
    <label>Recommend us to other organization</label>
    <type>TextArea</type>
</CustomField>